<resources>
    <string name="app_name">스터디위드미</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="splash1_main">스터디</string>
    <string name="splash2_main">위드미</string>

    <string name="viewpager1_main">스터디 위드미에 오신 것을 환영해요.</string>
    <string name="viewpager1_desc">스터디 위드미는 부경대학교 학생들의 \n스터디 그룹을 위한 어플이에요.</string>
    <string name="title_activity_introduce">IntroduceActivity</string>


    <string name="login_google">구글로   로그인하기</string>
    <string name="login_kakao">카카오로   로그인하기</string>
    <string name="login_study">스터드  위드미  회원가입</string>
    <string name="login_already"><u>이미  회원가입이  되어  있으시다면?</u></string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>