<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/pencil"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/watermelon"
        android:gravity="center"
        android:letterSpacing="-0.05"
        android:text="@string/splash1_main"
        android:textColor="#144272"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv"
        app:layout_constraintTop_toTopOf="@id/iv" />

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/watermelon"
        android:gravity="center"
        android:letterSpacing="-0.05"
        android:text="@string/splash2_main"
        android:textColor="#144272"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv"
        app:layout_constraintTop_toTopOf="@id/tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline3"

        android:paddingHorizontal="50dp">

        <ImageView
            android:id="@+id/btn_google"
            android:src="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_google"
            android:src="@drawable/google"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_google"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/neo3"
            android:textColor="@color/black"
            android:gravity="center"
            android:letterSpacing="-0.05"
            app:layout_constraintTop_toTopOf="@id/btn_google"
            app:layout_constraintBottom_toBottomOf="@id/btn_google"
            app:layout_constraintStart_toStartOf="@id/iv_google"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        android:paddingHorizontal="50dp">

        <ImageView
            android:id="@+id/btn_kakao"
            android:src="@drawable/shape2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_kakao"
            android:src="@drawable/kakao"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_kakao"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/neo3"
            android:textColor="@color/black"
            android:gravity="center"
            android:letterSpacing="-0.05"
            app:layout_constraintTop_toTopOf="@id/btn_kakao"
            app:layout_constraintBottom_toBottomOf="@id/btn_kakao"
            app:layout_constraintStart_toStartOf="@id/iv_kakao"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        android:paddingHorizontal="50dp">

        <ImageView
            android:id="@+id/btn_study"
            android:src="@drawable/shape3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/main1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_study"
            android:src="@drawable/pencil"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_study"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/neo3"
            android:textColor="@color/black"
            android:gravity="center"
            android:letterSpacing="-0.05"
            app:layout_constraintTop_toTopOf="@id/btn_study"
            app:layout_constraintBottom_toBottomOf="@id/btn_study"
            app:layout_constraintStart_toStartOf="@id/iv_study"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />
</androidx.constraintlayout.widget.ConstraintLayout>